--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+			<!-- The core Firebase JS SDK is always required and must be listed first -->
+		<script src="/__/firebase/7.17.2/firebase-app.js"></script>
+
+		<!-- TODO: Add SDKs for Firebase products that you want to use
+			https://firebase.google.com/docs/web/setup#available-libraries -->
+		<script src="/__/firebase/7.17.2/firebase-analytics.js"></script>
+
+		<!-- Initialize Firebase -->
+		<script src="/__/firebase/init.js"></script>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -46,23 +55,28 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/stlStadium.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>My name is Dan Cashion and I've been working in Web Development for a year.   By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>Go Cards!</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Projects</h2>
-								<span class="image main"><img src="images/galaxyRunnerProject.jpg" alt="" /></span>
+								<span class="image main"><img src="images/Qbert.png" alt="Qbert image" /></span>
+								<p>I built Qbert Cubes to challenge my CSS abilities. The project is built using CSS and HTML almost exclusively with the exception of a few lines of javascript to handle character movement.  I've enjoyed building this project and time willing will be able to make it into a fully playable game. You can find the source code on GitHub <a href https://github.com/dgcash01/qbert-css> Qbert-CSS</a></p>
+								<h3>Technologies used</h3>
+								<p>I used Visual Studio code, HTML, CSS, and vanilla javascript.</p>
+								<span class="image main"><img src="images/galaxyRunnerProject.jpg" alt="Galaxy Runner Image" /></span>
 								<p>Built in Unity 3D in 2012 for Android and iOS.  This project was built with a friend and released on Google Play and the App Store and was downloaded over thirty thousand times.  I was responsible for creating sound, game assets, backgrounds, level design, menu design and code.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<h3>Technologies used</h3>
+								<p>When building Galaxy Runner we used an agile development cycle.  The project was built using the Unity Game Engine and coded in C# using Visual Studio.  The assets were created using Blender and Gimp as well as Unity 3D.</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<span class="image secondary"><img src="images/website head shot.jpg" alt="Dan Cashion" /></span>
+								<p>I'm a Full Stack web developer with a passion for new technology. I'm proud to call St. Louis, MO home.  I enjoy the local restaurants, Cardinals baseball, Blues hockey and Forest Park. I've recently completed my education at <a href="https://lambdaschool.com/">Lambda School.</a>  I've been learning new technologies since 2012 when I released my project on the Play store. With the extensive formal training I received at Lambda School, I finally have the confidence and talents to pursue a career in technology.  If you're looking for a professional that likes finding solutions, has a passion for technology, and has a background in business development, I'm excited to hear from you.</p>
 							</article>
 
 						<!-- Contact -->
@@ -342,7 +356,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+
 					</footer>
 
 			</div>
